[tool.poetry]
name = "adaptive-threshold"
version = "0.1.0"
description = ""
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
